[package]
authors = ["kteza1 <k.teza1@gmail.com>"]
name = "rumqtt"
version = "0.7.0"
description = "A fast, lockfree mqtt client"
documentation = "http://ather-energy.github.io/RuMqtt/rumqtt/index.html"
repository = "https://github.com/Ather-Energy/RuMqtt"
readme = "README.md"
license = "Unlicense/MIT"
exclude = ["tests/test-utils"]
keywords = ["mqtt", "iot"]

[dependencies]
log = "0.3"
mio = {git = "https://github.com/carllerche/mio.git"}
rand = "0.3"
time = "0.1"
threadpool = "1.3"
mqtt-protocol = { git = "https://github.com/hashrabbit/mqtt-rs.git", rev = "eb12ca97533f18fe2136b2849606c3f5f7e19265" }
openssl = { version = "0.9" }

[dev-dependencies]
env_logger = "0.3"
